# riscV

./: .gitignore  CMakeLists.txt  decoder.cpp  decoder.h  main.cpp  opcodes.cpp  opcodes.h
decoder/: decoder.cpp  decoder.h  opcodes.cpp  opcodes.h
examples/: addition  addition.c  addition_stdlib.c  math  math.c
examples/isa-tests/: rv32mi-p-breakpoint  rv32mi-p-breakpoint.dump  rv32mi-p-csr  rv32mi-p-csr.dump  rv32mi-p-illegal  rv32mi-p-illegal.dump  rv32mi-p-ma_addr  rv32mi-p-ma_addr.dump  rv32mi-p-ma_fetch  rv32mi-p-ma_fetch.dump  rv32mi-p-mcsr  rv32mi-p-mcsr.dump  rv32mi-p-sbreak  rv32mi-p-sbreak.dump  rv32mi-p-scall  rv32mi-p-scall.dump  rv32mi-p-shamt  rv32mi-p-shamt.dump  rv32si-p-csr  rv32si-p-csr.dump  rv32si-p-dirty  rv32si-p-dirty.dump  rv32si-p-ma_fetch  rv32si-p-ma_fetch.dump  rv32si-p-sbreak  rv32si-p-sbreak.dump  rv32si-p-scall  rv32si-p-scall.dump  rv32si-p-wfi  rv32si-p-wfi.dump  rv32ua-p-amoadd_w  rv32ua-p-amoadd_w.dump  rv32ua-p-amoand_w  rv32ua-p-amoand_w.dump  rv32ua-p-amomax_w  rv32ua-p-amomax_w.dump  rv32ua-p-amomaxu_w  rv32ua-p-amomaxu_w.dump  rv32ua-p-amomin_w  rv32ua-p-amomin_w.dump  (+722 more)
hardware/: CSR.h  CSR_entries.h  memory.h  registers.h
hardware/CSR/: csr_register.h  misa.h
instructions/: ADD.h  ADDI.h  AND.h  ANDI.h  AUIPC.h  BEQ.h  BGE.h  BGEU.h  BLT.h  BLTU.h  BNE.h  Instruction.h  JAL.h  JALR.h  LB.h  LBU.h  LH.h  LHU.h  LUI.h  LW.h  OR.h  ORI.h  SB.h  SH.h  SLL.h  SLLI.h  SLT.h  SLTI.h  SLTIU.h  SLTU.h  SRA.h  SRAI.h  SRL.h  SRLI.h  SUB.h  SW.h  XOR.h  XORI.h  all.h
instructions/M/: DIV.h  DIVU.h  MUL.h  MULH.h  MULHSU.h  MULHU.h  REM.h  REMU.h
instructions/base_I/: ADD.h  ADDI.h  AND.h  ANDI.h  AUIPC.h  BEQ.h  BGE.h  BGEU.h  BLT.h  BLTU.h  BNE.h  CSRRC.h  CSRRCI.h  CSRRS.h  CSRRSI.h  CSRRW.h  CSRRWI.h  EBREAK.h  ECALL.h  FENCE.I.h  FENCE.h  JAL.h  JALR.h  LB.h  LBU.h  LH.h  LHU.h  LUI.h  LW.h  OR.h  ORI.h  SB.h  SH.h  SLL.h  SLLI.h  SLT.h  SLTI.h  SLTIU.h  SLTU.h  SRA.h  (+7 more)
instructions/extension/F/: FLW.h
instructions/extension/M/: DIV.h  DIVU.h  MUL.h  MULH.h  MULHSU.h  MULHU.h  REM.h  REMU.h
src/: main.cpp
src/decoder/: decoder.cpp  decoder.h  opcodes.cpp  opcodes.h
src/hardware/: cpu.h  interrups.h  memory.h  registers.cpp  registers.h  traps.h
src/hardware/CSR/: csr_entry.h  csr_ids.h  fcsr.h  mcause.h  misa.h  mstatus.h  msu_status.h  mtvec.h
src/instructions/: all.h
src/instructions/base_I/: ADD.h  ANDI.h  AUIPC.h  BEQ.h  BGE.h  BGEU.h  BLT.h  BNE.h  CSRRW.h  EBREAK.h  JAL.h  LB.h  LHU.h  LW.h  OR.h  ORI.h  SB.h  SH.h  SLL.h  SLT.h  SLTI.h  SLTU.h  SRAI.h  SRL.h  SRLI.h  SUB.h  SW.h  XORI.h
src/instructions/base_I/priviledged/: MRET.h  SRET.h  URET.h  WFI.h
src/instructions/extension/D/: FADD.D.h  FDIV.D.h  FLW.h  FMAX.D.h  FMIN.D.h  FMUL.D.h  FSD.h  FSUB.D.h
src/instructions/extension/F/: FADD.S..h  FADD.S.h  FADD.h  FDIV.S.h  FDIV.h  FLW.h  FMADD.S.h  FMAX.S.h  FMAX.h  FMIN.S.h  FMIN.h  FMUL.S.h  FMUL.h  FSUB.S.h  FSUB.h  FSW.h
src/instructions/extension/M/: DIV.h  DIVU.h  MUL.h  MULH.h  MULHSU.h  MULHU.h  REM.h  REMU.h
src/instructions/priviledged/: MRET.h  SRET.h  URET.h
